updated to do list

--- a/index.html
+++ b/index.html
@@ -5,26 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
-  <script src="script.js"></script>
     <title>To Do List</title>
 </head>
 
-<body>
+<body  >
     <header>To do list</header>
 
     <div class="container">
-       
         <div class="input">
             <input type="text" id="userInput" placeholder="Input your task here....">
-            <a href=# id="btn" onclick="newTask()">Add task</a>
+            <a href=# id="btn" onclick="handleClick()">Add task</a>
         </div>
         <div>
             <ul id="taskList">
-                <li>Make tea</li>
-                <li>Walk the dog</li>
-                <li>Call dentist</li>
+                
             </ul>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
