--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body  >
-    <header>To do list</header>
 
     <div class="container">
-        <div class="input">
+        <div class="input-container">
             <input type="text" id="userInput" placeholder="Input your task here....">
-            <a href=# id="btn" onclick="handleClick()">Add task</a>
+            <button id="btn" onclick="handleClick()">Add task</button>
+           
         </div>
         <div>
             <ul id="taskList">
