--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body  >
-
+ <div class="container-wrap">
+    
     <div class="container">
         <div class="input-container">
             <input type="text" id="userInput" placeholder="Input your task here....">
@@ -23,6 +24,6 @@
         </div>
     </div>
     <script src="script.js"></script>
-    
+   </div>
 </body>
 </html>
