--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
     <title>To Do List</title>
 </head>
 
@@ -14,7 +15,7 @@
     <div class="container">
         <div class="input-container">
             <input type="text" id="userInput" placeholder="Input your task here....">
-            <button id="btn" onclick="handleClick()">Add task</button>
+            <button id="btn" onclick="handleClick()" >Add task</button>
            
         </div>
         <div>
@@ -23,6 +24,7 @@
             </ul>
         </div>
     </div>
+    
     <script src="script.js"></script>
    </div>
 </body>
