--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         </div>
         <div>
             <div id="listTitle">Tasks to do</div>
-            <ul id="taskList">
+            <ul id="taskList" class="task-list">
                 
             </ul>
         </div>
 
         <div >
             <div id="listTitle">Completed Tasks</div>
-            <ul id="taskListCompleted">
+            <ul id="taskListCompleted" class="task-list">
                 
             </ul>
         </div>
